# vendorshield

./: .gitignore  CHANGELOG.md  DEPLOY.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ml-ci.yml
apps/web/: .env  .env.example  middleware.ts  next.config.mjs  package.json  react-simple-maps.d.ts  tsconfig.json
docs/: README.md  architecture.mdx  concepts.mdx  docs.json  guide.mdx  introduction.mdx  quickstart.mdx  troubleshooting.mdx
docs/deployment/: automation.mdx  environment.mdx  (+2 more)
services/ml/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
services/ml/src/vendorshield_ml/: __init__.py  cli.py  config.py  logging.py
services/ml/src/vendorshield_ml/data/: loader.py  schema.py  synthetic.py
services/ml/src/vendorshield_ml/features/: engineering.py
services/ml/src/vendorshield_ml/models/: __init__.py  estimators.py  registry.py
services/ml/src/vendorshield_ml/monitoring/: __init__.py  drift.py
services/ml/src/vendorshield_ml/serving/: app.py  inference.py  schemas.py
services/ml/src/vendorshield_ml/training/: metrics.py  pipeline.py
services/ml/tests/: conftest.py  test_drift.py  test_features.py  test_pipeline_smoke.py  test_serving.py
test-data/: README.md  demo-deliveries.csv  demo-suppliers.csv  gen_demo_dataset.py  gen_synthetic_suppliers.py  sample-import.csv  sample-import.json  sample-import.xls  seed-deliveries.sql  synthetic-suppliers.csv  synthetic-suppliers.json  wipe-and-seed-suppliers.sql  wipe-suppliers.sql
(+285 files in other folders)
