[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vendorshield-ml"
version = "0.1.0"
description = "VendorShield — supplier operational-risk prediction service (delay & defect models)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "joblib>=1.4",
  "pandera>=0.20",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
# Tracking, explainability and data versioning — optional so core training/serving
# runs with zero external services (file-based fallbacks built in).
mlops = ["mlflow>=2.17", "shap>=0.46"]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.7", "mypy>=1.13", "dvc>=3.55"]

[project.scripts]
vendorshield-ml = "vendorshield_ml.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vendorshield_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
